--- a/blockChain/akka.study/akka.study.csproj
+++ b/blockChain/akka.study/akka.study.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="bin\Debug\netcoreapp2.2\log.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.11" />
   </ItemGroup>
 
