调整测试方法

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /blockChain/Distributed.Akka.Server/bin
 /blockChain/Distributed.Akka.Common/obj
 /blockChain/Distributed.Akka.Common/bin
+/blockChain/.vs
