--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /blockChain/Distributed.Akka.Common/obj
 /blockChain/Distributed.Akka.Common/bin
 /blockChain/.vs
+/blockChain/akka.study/obj
+/blockChain/Upnp/bin
+/blockChain/Upnp/obj
+/blockChain/Upnp/Properties
+/blockChain/blockChain/obj
